Fix scrollbar on chrome

--- a/index.css
+++ b/index.css
@@ -1,4 +1,20 @@
 @tailwind base;
+
+::-webkit-scrollbar {
+  width: 2px;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(125, 125, 125, 0.3);
+  border-radius: 2px;
+  border: transparent;
+}
+
 @tailwind components;
 @tailwind utilities;
 
